Bug 284521 Still can't switch themes, but in a different set of circumstances, so check the skin switch pref in more places. r=bsmedberg sr=darin